<resources>
    <string name="app_name">TreadMill</string>
    <string name="workout_mode_hill">HILL</string>
    <string name="workout_mode_interval">INTERVAL</string>
    <string name="workout_mode_goal">GOAL</string>
    <string name="workout_mode_quick">QUICK START</string>
    <string name="workout_mode_virtual">VIRTUAL REALITY</string>
    <string name="workout_mode_hrc">HRC</string>
    <string name="workout_mode_fitness">FITNESS TEST</string>
    <string name="workout_mode_user">USER PROGRAM</string>
    <string name="media_you">YouTube</string>
    <string name="media_chrome">Chrome</string>
    <string name="media_face">Facebook</string>
    <string name="media_music">MUSIC</string>
    <string name="media_video">VIDEO</string>
    <string name="media_insta">Instagram</string>
    <string name="media_flikr">Flikr</string>
    <string name="media_twitter">Twitter</string>
    <string name="media_av">AV in</string>
    <string name="media_screen">Screen Mirroring</string>
    <string name="media_bai">Bai 百度</string>
    <string name="media_weibo">微博</string>
    <string name="media_i71">愛奇藝</string>



    <string name="language_us">US</string>
    <string name="language_zh">中国</string>
    <string name="language_de">DE</string>
    <string name="language_tr">TR</string>
    <string name="language_ir">IR</string>
    <string name="language_es">ESP</string>
    <string name="language_pt">PT</string>
    <string name="language_ru">RUS</string>
    <string name="nfc_conn_succ">CONNECTION SUCCESSFUL</string>
    <string name="nfc_conn_fail">CONNECTION FAILED ! PLEASE TRY AGAIN</string>
    <string name="nfc_welcome">WELCOME TO OUR GYM !</string>
    <string name="msg_con_lock">CONSOLE LOCKED</string>
    <string name="msg_psw">PASSWORD</string>
    <string name="msg_initial">INITIALITE…</string>
    <string name="msg_press">Press STOP to bypass</string>
    <string name="factory_mode_title">SELECT MODE</string>
    <string name="factory_mode_hint">Please select from the following modes either Factory 1, Factory 2.</string>
    <string name="factory_mode_f1">Factory 1</string>
    <string name="factory_mode_f2">Factory 2</string>
    <string name="setting">Setting</string>
    <string name="unit">Unit</string>
    <string name="type">Type</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="machine_bike">Bike</string>
    <string name="machine_recumbent">Recumbent</string>
    <string name="machine_elliptical">Elliptical</string>
    <string name="information">Information</string>
    <string name="update">Update</string>
    <string name="logo">Logo</string>
    <string name="display_mode">Display mode</string>
    <string name="pause_mode">Pause Mode</string>
    <string name="key_tone">Key Tone</string>
    <string name="buzzer">Buzzer</string>
    <string name="child_lock">Child Lock</string>
    <string name="login_ctrl_page">Login ctrl page</string>
    <string name="key_test">Key Test</string>
    <string name="level">Level</string>
    <string name="pwm">PWM</string>
    <string name="total_time">Total Time</string>
    <string name="total_distance">Total Distance</string>
    <string name="ver_sdk">SDK Ver.</string>
    <string name="ver_firmware">Firmware Ver.</string>
    <string name="ver_software">Software Ver.</string>
    <string name="unit_km">km</string>
    <string name="unit_mile">mile</string>
    <string name="unit_hr">hr</string>
    <string name="unit_min">min</string>
    <string name="brake_test">Brake Test</string>
    <string name="msg_usb_software_update">Please make sure the USB, which contains the updated software, is inserted into the USB port.</string>
    <string name="msg_software_updating">Software updatin…</string>
    <string name="msg_not_short_down_sys">Please do not shut down the system</string>
    <string name="msg_updatae_complete">Software update is completed</string>
    <string name="msg_download_failed">Software download failed</string>
    <string name="msg_usb_update_logo">Please make sure the USB, which contains the updated logo, is inserted into the USB port</string>
    <string name="all_done">All Done!</string>
    <string name="msg_parament_reset">Are you sure the parameter need to be reset?</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="enter">Enter</string>
    <string name="reset">Reset</string>
    <string name="update_sw">Update S / W</string>
    <string name="back">Back</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="upgrade_sw">Upgrade S/W</string>
    <string name="update_logo">Update Logo</string>
    <string name="system">System</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wireless">Wireless</string>
    <string name="lock">Lock</string>
    <string name="password">Password</string>
    <string name="brightness">Brightness</string>
    <string name="sounds">Sounds</string>
    <string name="time">Time</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="distance">Distance</string>
    <string name="remaining_distance">Remaining Distance</string>
    <string name="customer_psw">Customer Password</string>
    <string name="srs_psw">SRS  Password</string>
    <string name="password_b">Password</string>
    <string name="incorrect_psw">INCORRECT PASSWORD</string>
    <string name="conn_error">CONNECTION ERROR</string>
    <string name="workout_mode_hint_b">Press Next to select a HRC / Press Start to begin workout</string>
    <string name="workout_mode_hint_a">Press Start to begin workout</string>
    <string name="workout_mode_hint_c">Press Back to setting / Press Start to begin workout</string>
    <string name="workout_mode_hint_d">Press Next to profile chart / Press Start to begin workout</string>
    <string name="workout_mode_hint_e">Slide your finger to set the Level chart</string>
    <string name="calories">Calories</string>
    <string name="unit_kcal">kcal</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="go">GO</string>
    <string name="pulse">Pulse</string>
    <string name="watt">Watt</string>
    <string name="speed">Speed</string>
    <string name="unit_kph">kph</string>
    <string name="unit_mph">mph</string>
    <string name="rpm">RPM</string>
    <string name="media">MEDIA</string>
    <string name="stop">STOP</string>
    <string name="start_b">START</string>
    <string name="skip">SKIP</string>
    <string name="quit">QUIT</string>
    <string name="continue_b">CONTINUE</string>
    <string name="no_hr">NO HR DETECTED</string>
    <string name="over_pulse">OVER PULSE</string>
    <string name="pausing">Pausing</string>
    <string name="warm_up">Warm Up</string>
    <string name="cool_down">Cool Down</string>
    <string name="workout_summary">Workout Summary</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="average">Average</string>
    <string name="unit_km_h">km/h</string>
    <string name="unit_mile_h">mile/h</string>
    <string name="unit_percent">%</string>
    <string name="unit_bpm">bpm</string>
    <string name="average_heart_rate">Average Heart Rate</string>
    <string name="average_speed">Average Speed</string>
    <string name="vo2_max">VO2 Max</string>
    <string name="excellent">Excellent</string>
    <string name="very_good">Very Good</string>
    <string name="good">Good</string>
    <string name="low">Low</string>
    <string name="very_low">Very Low</string>
    <string name="poor">Poor</string>
    <string name="ok">OK</string>
    <string name="msg_no_sd_card">SD CARD CAN\'T BE READ</string>
    <string name="msg_reinsert_sd_card">Please reinsert the SD card</string>
    <string name="workout_mode_hint_f">Please input your information</string>
    <string name="workout_mode_hint_g">This program allows the user to set one goal for the workout by selecting either TIME, DISTANCE, or CALORIES.</string>
    <string name="workout_mode_hint_h">This program allows the user to set the duration of the workout by selecting TIME.</string>
    <string name="workout_mode_hint_i">Please select from the following modes.</string>
    <string name="vr_a">France Paris  Eiffel Tower</string>
    <string name="vr_b">Czech Republic Bohemian Mountains</string>
    <string name="vr_c">Germany  Dresden Center</string>
    <string name="vr_d">Germany Balt Ahrenshoop</string>
    <string name="vr_e">Italy Rome Colosseo</string>
    <string name="vr_f">Italy Passo Oscuro</string>
    <string name="vr_g">United Kingdom London  Millennium Bridge</string>
    <string name="vr_h">Austria Wien Schonbrunn</string>
    <string name="vr_i">Austria Helmesgupf</string>
    <string name="vr_j">Austria Hallstatt</string>
    <string name="vr_k">British Through the valley green</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="hrc_60">HRC 60%</string>
    <string name="hrc_80">HRC 80%</string>
    <string name="target_hr">Target HR</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lb">lb</string>
    <string name="value_nothing" translatable="false">—</string>
    <string name="vr_a_1">France Paris</string>
    <string name="vr_a_2">Eiffel Tower</string>
    <string name="vr_b_1">Czech Republic</string>
    <string name="vr_b_2">Bohemian Mountains</string>
    <string name="vr_c_1">Germany</string>
    <string name="vr_c_2">Dresden Center</string>
    <string name="vr_d_1">Germany</string>
    <string name="vr_d_2">Balt Ahrenshoop</string>
    <string name="vr_e_1">Italy</string>
    <string name="vr_e_2">Rome Colosseo</string>
    <string name="vr_f_1">Italy</string>
    <string name="vr_f_2">Passo Oscuro</string>
    <string name="vr_g_1">United Kingdom London</string>
    <string name="vr_g_2">Millennium Bridge</string>
    <string name="vr_h_1">Austria</string>
    <string name="vr_h_2">Wien Schonbrunn</string>
    <string name="vr_i_1">Austria</string>
    <string name="vr_i_2">Helmesgupf</string>
    <string name="vr_j_1">Austria</string>
    <string name="vr_j_2">Hallstatt</string>
    <string name="vr_k_1">British</string>
    <string name="vr_k_2">Through the valley green</string>
</resources>
