<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/settings_card_system"
        style="@style/settings_tabs_on"
        android:layout_marginLeft="52dp"
        android:text="@string/system" />

    <TextView
        android:id="@+id/settings_card_bluetooth"
        style="@style/settings_tabs_off"
        android:layout_marginLeft="14dp"
        android:text="@string/bluetooth" />

    <TextView
        android:id="@+id/settings_card_wifi"
        style="@style/settings_tabs_off"
        android:layout_marginLeft="14dp"
        android:text="@string/wireless" />

    <TextView
        android:id="@+id/settings_card_lock"
        style="@style/settings_tabs_off"
        android:layout_marginLeft="14dp"
        android:text="@string/lock" />
</LinearLayout>



