<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/workout_mode_vr_img_1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_1" />

        <View
            android:layout_width="15dp"
            android:layout_height="110dp" />

        <ImageView
            android:id="@+id/workout_mode_vr_img_2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_2" />

        <View
            android:layout_width="15dp"
            android:layout_height="110dp" />

        <ImageView
            android:id="@+id/workout_mode_vr_img_3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_3" />

        <View
            android:layout_width="15dp"
            android:layout_height="110dp" />

        <ImageView
            android:id="@+id/workout_mode_vr_img_4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_mode_vr_name_1_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_a_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_2_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_b_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_3_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_c_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_4_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_d_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_mode_vr_name_1_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_a_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_2_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_b_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_3_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_c_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_4_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_d_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

    </LinearLayout>

</LinearLayout>
