<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/workout_mode_vr_img_5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_5" />

        <View
            android:layout_width="15dp"
            android:layout_height="110dp" />

        <ImageView
            android:id="@+id/workout_mode_vr_img_6"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_6" />

        <View
            android:layout_width="15dp"
            android:layout_height="110dp" />

        <ImageView
            android:id="@+id/workout_mode_vr_img_7"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_7" />

        <View
            android:layout_width="15dp"
            android:layout_height="110dp" />

        <ImageView
            android:id="@+id/workout_mode_vr_img_8"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/btn_home_vr_8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_mode_vr_name_5_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_e_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_6_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_f_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_7_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_g_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_8_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_h_1"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_mode_vr_name_5_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_e_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_6_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_f_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_7_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_g_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/workout_mode_vr_name_8_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/vr_h_2"
            android:textColor="@color/workout_mode_white"
            android:textSize="36px" />

    </LinearLayout>

</LinearLayout>
