<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <ImageView
        android:id="@+id/workout_mode_vr_img_1"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:src="@drawable/btn_home_vr_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_img_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <ImageView
        android:id="@+id/workout_mode_vr_img_2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/btn_home_vr_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_img_1"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_img_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />


    <ImageView
        android:id="@+id/workout_mode_vr_img_3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/btn_home_vr_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_img_2"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_img_4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />


    <ImageView
        android:id="@+id/workout_mode_vr_img_4"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/btn_home_vr_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_img_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/workout_mode_vr_name_1_1"
        style="@style/vr_item_text_1"
        android:text="@string/vr_a_1"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_name_2_1"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_img_1" />


    <TextView
        android:id="@+id/workout_mode_vr_name_2_1"
        style="@style/vr_item_text_2"
        android:gravity="center|left"
        android:text="@string/vr_b_1"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_name_1_1"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_name_3_1"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_img_2" />


    <TextView
        android:id="@+id/workout_mode_vr_name_3_1"
        style="@style/vr_item_text_2"
        android:text="@string/vr_c_1"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_name_2_1"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_name_4_1"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_img_3" />


    <TextView
        android:id="@+id/workout_mode_vr_name_4_1"
        style="@style/vr_item_text_2"
        android:text="@string/vr_d_1"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_name_3_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_img_4" />


    <TextView
        android:id="@+id/workout_mode_vr_name_1_2"
        style="@style/vr_item_text_1"
        android:text="@string/vr_a_2"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_name_2_2"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_name_1_1" />


    <TextView
        android:id="@+id/workout_mode_vr_name_2_2"
        style="@style/vr_item_text_2"
        android:text="@string/vr_b_2"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_name_1_2"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_name_3_2"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_name_2_1" />


    <TextView
        android:id="@+id/workout_mode_vr_name_3_2"
        style="@style/vr_item_text_2"
        android:gravity="center|left"
        android:text="@string/vr_c_2"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_name_2_2"
        app:layout_constraintRight_toLeftOf="@+id/workout_mode_vr_name_4_2"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_name_3_1" />


    <TextView
        android:id="@+id/workout_mode_vr_name_4_2"
        style="@style/vr_item_text_2"
        android:text="@string/vr_d_2"
        android:textColor="@color/workout_mode_white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/workout_mode_vr_name_3_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workout_mode_vr_name_4_1" />

</android.support.constraint.ConstraintLayout>
