<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/workout_edit_info_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/img_program_frame"
    android:orientation="vertical"
    android:paddingLeft="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_edit_age"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/age"
            android:textColor="@color/workout_mode_white"
            android:textSize="46px" />

        <TextView
            android:id="@+id/workout_edit_age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/img_number_frame_1"
            android:gravity="center"
            android:textColor="@color/workout_mode_white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_edit_weight"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/weight"
            android:textColor="@color/workout_mode_white"
            android:textSize="46px" />

        <TextView
            android:id="@+id/workout_edit_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/img_number_frame_1"
            android:gravity="center"
            android:textColor="@color/workout_mode_white" />

        <TextView
            android:id="@+id/workout_edit_weight_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/unit_kg"
            android:textColor="@color/workout_mode_white"
            android:textSize="46px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_edit_time"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:text="@string/time"
            android:textColor="@color/workout_mode_white"
            android:textSize="46px" />

        <TextView
            android:id="@+id/workout_edit_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/img_number_frame_1"
            android:gravity="center"
            android:textColor="@color/workout_mode_white" />

        <TextView
            android:id="@+id/workout_edit_time_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/unit_min"
            android:textColor="@color/workout_mode_white"
            android:textSize="46px" />

    </LinearLayout>

</LinearLayout>
